--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "name",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "description": "description",
   "main": "index.js",
   "scripts": {
@@ -29,5 +29,7 @@
     "path": "^0.12.7"
   },
   "dependencies": {},
-  "contributors": ["whiteGloom <karabin.m@yandex.ru> (https://github.com/whiteGloom)"]
+  "contributors": [
+    "whiteGloom <karabin.m@yandex.ru> (https://github.com/whiteGloom)"
+  ]
 }
