--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
   "name": "name",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "description",
   "main": "index.js",
   "scripts": {
     "build": "webpack -p",
-    "buildW": "webpack --watch"
+    "build-watch": "webpack --watch",
+    "build-live": "webpack-dev-server",
+    "test": "jasmine"
   },
   "author": "author",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.28.4",
-    "webpack-cli": "^3.2.1",
-    "webpack-merge": "^4.2.1",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
+    "html-beautify-webpack-plugin": "^1.0.5",
+    "html-webpack-plugin": "^3.2.0",
+    "jasmine": "^3.5.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "path": "^0.12.7",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
-    "html-webpack-plugin": "^3.2.0",
-    "html-beautify-webpack-plugin": "^1.0.5",
     "style-loader": "^0.23.1",
-    "css-loader": "^2.1.0",
     "stylus": "^0.54.5",
     "stylus-relative-loader": "^4.0.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "path": "^0.12.7"
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {},
   "contributors": [
