--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "name",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "description",
   "main": "index.js",
   "scripts": {
     "build": "webpack -p",
     "build-watch": "webpack --watch",
     "build-live": "webpack-dev-server",
-    "test": "jasmine"
+    "test": "babel-node spec/run.js"
   },
   "author": "author",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.6.2",
     "@babel/core": "^7.2.2",
+    "@babel/node": "^7.6.2",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
@@ -20,6 +22,7 @@
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-webpack-plugin": "^3.2.0",
     "jasmine": "^3.5.0",
+    "jsdom": "^15.1.1",
     "mini-css-extract-plugin": "^0.5.0",
     "path": "^0.12.7",
     "pug": "^2.0.3",
