--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "name",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "description",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,9 @@
     "build-live": "webpack-dev-server",
     "test": "babel-node spec/run.js"
   },
+  "_moduleAliases": {
+
+  },
   "author": "author",
   "license": "ISC",
   "devDependencies": {
@@ -16,14 +19,17 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.6.2",
     "@babel/preset-env": "^7.2.3",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "eslint": "^6.5.1",
     "file-loader": "^3.0.1",
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-webpack-plugin": "^3.2.0",
     "jasmine": "^3.5.0",
     "jsdom": "^15.1.1",
     "mini-css-extract-plugin": "^0.5.0",
+    "module-alias": "^2.2.2",
     "path": "^0.12.7",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
