--- a/package.json
+++ b/package.json
@@ -1,48 +1,57 @@
 {
-  "name": "name",
-  "version": "1.1.6",
-  "description": "description",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack -p",
-    "build-watch": "webpack --watch",
-    "build-live": "webpack-dev-server",
-    "test": "babel-node spec/run.js"
-  },
-  "_moduleAliases": {
-
-  },
-  "author": "author",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.2.2",
-    "@babel/node": "^7.6.2",
-    "@babel/preset-env": "^7.2.3",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
-    "eslint": "^6.5.1",
-    "file-loader": "^3.0.1",
-    "html-beautify-webpack-plugin": "^1.0.5",
-    "html-webpack-plugin": "^3.2.0",
-    "jasmine": "^3.5.0",
-    "jsdom": "^15.1.1",
-    "mini-css-extract-plugin": "^0.5.0",
-    "module-alias": "^2.2.2",
-    "path": "^0.12.7",
-    "pug": "^2.0.3",
-    "pug-loader": "^2.4.0",
-    "style-loader": "^0.23.1",
-    "stylus": "^0.54.5",
-    "stylus-relative-loader": "^4.0.0",
-    "webpack": "^4.28.4",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.8.1",
-    "webpack-merge": "^4.2.1"
-  },
-  "dependencies": {},
-  "contributors": [
-    "whiteGloom <karabin.m@yandex.ru> (https://github.com/whiteGloom)"
-  ]
+	"name": "name",
+	"version": "1.1.7",
+	"description": "description",
+	"main": "index.js",
+	"scripts": {
+		"build": "webpack -p",
+		"build-watch": "webpack --watch",
+		"build-live": "webpack-dev-server",
+		"test": "babel-node spec/run.js"
+	},
+	"_moduleAliases": {},
+	"author": "author",
+	"license": "MIT",
+	"devDependencies": {
+		"@babel/cli": "^7.6.2",
+		"@babel/core": "^7.2.2",
+		"@babel/node": "^7.6.2",
+		"@babel/preset-env": "^7.2.3",
+		"babel-eslint": "^10.0.3",
+		"babel-loader": "^8.0.5",
+		"css-loader": "^2.1.0",
+		"eslint": "^6.5.1",
+		"file-loader": "^3.0.1",
+		"html-beautify-webpack-plugin": "^1.0.5",
+		"html-webpack-plugin": "^3.2.0",
+		"jasmine": "^3.5.0",
+		"jsdom": "^15.1.1",
+		"mini-css-extract-plugin": "^0.5.0",
+		"module-alias": "^2.2.2",
+		"path": "^0.12.7",
+		"pug": "^2.0.3",
+		"pug-loader": "^2.4.0",
+		"style-loader": "^0.23.1",
+		"stylus": "^0.54.5",
+		"stylus-relative-loader": "^4.0.0",
+		"webpack": "^4.28.4",
+		"webpack-cli": "^3.2.1",
+		"webpack-dev-server": "^3.8.1",
+		"webpack-merge": "^4.2.1"
+	},
+	"dependencies": {},
+	"contributors": [
+		"whiteGloom <karabin.m@yandex.ru> (https://github.com/whiteGloom)"
+	],
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/whiteGloom/Webpack-personal-template.git"
+	},
+	"keywords": [
+		"template"
+	],
+	"bugs": {
+		"url": "https://github.com/whiteGloom/Webpack-personal-template/issues"
+	},
+	"homepage": "https://github.com/whiteGloom/Webpack-personal-template#readme"
 }
