--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "name",
-	"version": "1.1.8",
+	"version": "1.1.9",
 	"description": "description",
-	"main": "index.js",
+	"main": "webpack.config.js",
 	"scripts": {
 		"build": "webpack -p",
 		"build-watch": "webpack --watch",
@@ -28,7 +28,6 @@
 		"jsdom": "^15.1.1",
 		"mini-css-extract-plugin": "^0.5.0",
 		"module-alias": "^2.2.2",
-		"path": "^0.12.7",
 		"pug": "^2.0.3",
 		"pug-loader": "^2.4.0",
 		"style-loader": "^0.23.1",
